logs/generation_resume_20260315_1354.log
  File "/home/padmin/workspace/cruisecompare/scripts/generate_content.py", line 209
    {{"category": "Loyalty program", "{line_a_slug}": "<value>", "{line_b
                                                                  ^
SyntaxError: '{' was never closed
